assets/styles/styles.css
body {
    margin: 0;
    font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;

    background: linear-gradient(
        135deg,
        #e8ece8 0%,
        #d6e8d6 40%,
        #f2e6a7 100%
    );

    min-height: 100vh;
}

/* NAV */

.nav {
    /* background: #0f0f0f24; */
    color: black;

    padding: 20px 40px;
    margin: 10px;
    border-radius: 20px;
    display: flex;
    align-items: center;
    gap: 15px;
    user-select: none !important;
    -webkit-user-drag: none !important;
    cursor: grab;
}

.nav-logo {
    margin: 0;
    font-size: 28px;
}

.nav-vstack {
    display: flex;
    flex-direction: column;
}

.nav-content {
    font-size: 14px;
    opacity: 0.8;
    left: 3px;
    position: relative;
    top: 7px;
}


.nav-content-item {
    color: rgb(41, 41, 41);
    cursor: pointer;
    left: 3px;
    position: relative;
    top: 7px;
}


/* HERO */

.hero {
    text-align: center;
    margin-top: 120px;
}

.hero-title {
    font-size: 52px;
    margin-bottom: 10px;
}

.hero-subtitle {
    font-size: 18px;
    color: #555;
}

/* BUTTONS */

.hero-buttons {
    margin-top: 30px;
}

.btn-primary {
    background: #111111cb;
    color: white;
    border: none;
    padding: 12px 22px;
    border-radius: 8px;
    /* margin-right: 10px; */
    cursor: pointer;
    text-decoration: none;
    color: white;
    backdrop-filter: blur(40px);
    top: 20px !important;
    position: relative;
}


/* FEATURES */

.features {
    display: flex;
    justify-content: center;
    gap: 40px;
    margin-top: 120px;
}

.feature {
    background: rgba(255, 255, 255, 0.592);
    color: black;
    padding: 30px;
    border-radius: 14px;
    width: 240px;
    text-align: center;
    cursor: grab;
    backdrop-filter: blur(40px);
    height: 180px;
}

.feature:hover {
    transform: translateY(-6px);
    box-shadow: 0 20px 40px rgba(0,0,0,0.2);
}

